--- a/package.json
+++ b/package.json
@@ -19,22 +19,21 @@
     "@types/react": "17.0.41",
     "@types/react-dom": "17.0.14",
     "babel-loader": "8.2.4",
-    "html-webpack-plugin": "^5.5.0",
+    "html-webpack-plugin": "5.5.0",
     "ts-loader": "9.2.8",
     "typescript": "4.6.2",
     "webpack": "5.70.0",
     "webpack-cli": "4.9.2",
     "webpack-dev-server": "4.7.4",
-    "webpack-merge": "^5.8.0"
+    "webpack-merge": "5.8.0",
+    "css-loader": "6.7.1",
+    "file-loader": "6.2.0",
+    "style-loader": "3.3.1"
   },
   "dependencies": {
-    "css-loader": "6.7.1",
-    "file-loader": "^6.2.0",
-    "mini-css-extract-plugin": "^2.6.0",
     "moment": "2.29.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "react-router-dom": "6.2.2",
-    "style-loader": "3.3.1"
+    "react-router-dom": "6.2.2"
   }
 }
