--- a/package.json
+++ b/package.json
@@ -19,18 +19,21 @@
     "@types/react": "17.0.41",
     "@types/react-dom": "17.0.14",
     "babel-loader": "8.2.4",
+    "css-loader": "6.7.1",
+    "file-loader": "6.2.0",
     "html-webpack-plugin": "5.5.0",
+    "nodemon": "2.0.15",
+    "style-loader": "3.3.1",
     "ts-loader": "9.2.8",
     "typescript": "4.6.2",
     "webpack": "5.70.0",
     "webpack-cli": "4.9.2",
     "webpack-dev-server": "4.7.4",
-    "webpack-merge": "5.8.0",
-    "css-loader": "6.7.1",
-    "file-loader": "6.2.0",
-    "style-loader": "3.3.1"
+    "webpack-merge": "5.8.0"
   },
   "dependencies": {
+    "axios": "0.26.1",
+    "express": "4.17.3",
     "moment": "2.29.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
