--- a/package.json
+++ b/package.json
@@ -9,6 +9,17 @@
     "build": "webpack --config webpack.prod.js",
     "eslint": "eslint src --ext .ts,.tsx"
   },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "*.{ts,tsx}": [
+      " prettier --write ",
+      " eslint --fix "
+    ]
+  },
   "author": "",
   "license": "ISC",
   "devDependencies": {
@@ -27,6 +38,7 @@
     "eslint-plugin-typescript": "^0.14.0",
     "file-loader": "6.2.0",
     "html-webpack-plugin": "5.5.0",
+    "lint-staged": "^12.3.7",
     "prettier": "2.6.2",
     "style-loader": "3.3.1",
     "ts-loader": "9.2.8",
@@ -35,7 +47,8 @@
     "webpack": "5.70.0",
     "webpack-cli": "4.9.2",
     "webpack-dev-server": "4.7.4",
-    "webpack-merge": "5.8.0"
+    "webpack-merge": "5.8.0",
+    "husky": "4.0.10"
   },
   "dependencies": {
     "axios": "0.26.1",
