--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "start": "webpack serve --open --config webpack.dev.js",
     "clean": "rm build/bundle.js",
     "build": "webpack --config webpack.prod.js",
-    "eslint": "eslint src --ext .ts,.tsx"
+    "lint": "eslint src --ext .ts,.tsx",
+    "format": "prettier --config \".prettierrc\" --write --check"
   },
   "husky": {
     "hooks": {
@@ -16,8 +17,13 @@
   },
   "lint-staged": {
     "*.{ts,tsx}": [
-      " prettier --write ",
-      " eslint --fix "
+      "npm run format",
+      "npm run lint",
+      "git add"
+    ],
+    "*.{css, json}": [
+      "npm run format",
+      "git add"
     ]
   },
   "author": "",
@@ -30,25 +36,24 @@
     "@babel/preset-typescript": "7.16.7",
     "@types/react": "17.0.41",
     "@types/react-dom": "17.0.14",
-    "@typescript-eslint/eslint-plugin": "^5.18.0",
+    "@typescript-eslint/eslint-plugin": "5.18.0",
+    "@typescript-eslint/parser": "5.19.0",
     "babel-loader": "8.2.4",
     "css-loader": "6.7.1",
-    "eslint": "^8.13.0",
-    "eslint-plugin-react": "^7.29.4",
-    "eslint-plugin-typescript": "^0.14.0",
+    "eslint": "8.13.0",
+    "eslint-plugin-react": "7.29.4",
     "file-loader": "6.2.0",
     "html-webpack-plugin": "5.5.0",
-    "lint-staged": "^12.3.7",
+    "husky": "4.0.10",
+    "lint-staged": "8.1.7",
     "prettier": "2.6.2",
     "style-loader": "3.3.1",
     "ts-loader": "9.2.8",
     "typescript": "4.6.2",
-    "typescript-eslint-parser": "^22.0.0",
     "webpack": "5.70.0",
     "webpack-cli": "4.9.2",
     "webpack-dev-server": "4.7.4",
-    "webpack-merge": "5.8.0",
-    "husky": "4.0.10"
+    "webpack-merge": "5.8.0"
   },
   "dependencies": {
     "axios": "0.26.1",
