--- a/.babelrc
+++ b/.babelrc
@@ -1,6 +1,3 @@
 {
-  "presets": ["@babel/preset-env", ["@babel/preset-react", {"runtime": "automatic"}], ["@babel/preset-typescript",{"allowNamespaces": true}]],
-    "test": {
-      "plugins": ["@babel/plugin-transform-modules-commonjs", ["@babel/plugin-transform-typescript", {"allowNamespaces": true}]]
-    }
+  "presets": ["@babel/preset-env", "@babel/preset-react", "@babel/preset-typescript"]
 }
