--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,5 +25,5 @@
   "include": [
     "./src/**/*"
   ],
-  "exclude": ["node_modules", "./src/tests"]
+  "exclude": ["node_modules", "./src/**/*.test.ts", "./src/**/*.test.tsx"]
 }
