--- a/package.json
+++ b/package.json
@@ -99,7 +99,7 @@
     "ts-loader": "9.2.8",
     "typescript": "4.6.2",
     "webpack": "5.70.0",
-    "webpack-cli": "4.9.2",
+    "webpack-cli": "4.10.0",
     "webpack-dev-server": "4.7.4",
     "webpack-merge": "5.8.0"
   },
@@ -111,6 +111,6 @@
     "react-dom": "17.0.2",
     "react-imask": "6.4.2",
     "react-router-dom": "6.2.2",
-    "ts-input-mask": "^2.1.0"
+    "ts-input-mask": "2.1.0"
   }
 }
