--- a/package.json
+++ b/package.json
@@ -30,7 +30,9 @@
       "@assets/(.*)": "<rootDir>/src/assets/$1",
       "@api/(.*)": "<rootDir>/src/api/$1",
       "@constants": "<rootDir>/src/constants/constants",
-      "@enums": "<rootDir>/src/enums/enums"
+      "@enums": "<rootDir>/src/enums/enums",
+      "@history": "<rootDir>/src/history/$1",
+      "@services": "<rootDir>/src/services/$1"
     },
     "testEnvironment": "jsdom",
     "transformIgnorePatterns": [
@@ -101,7 +103,7 @@
     "ts-loader": "9.2.8",
     "typescript": "4.6.2",
     "webpack": "5.70.0",
-    "webpack-cli": "4.9.2",
+    "webpack-cli": "4.10.0",
     "webpack-dev-server": "4.7.4",
     "webpack-merge": "5.8.0"
   },
